# things

./: LICENSE  README.md
airplane/flysight mount/: Bracket.stl  Mount.stl  skeleton v10.f3d  skeleton v10.step
airplane/pitot cover/: cover.stl  flex pitot cover v5.f3d  flex pitot cover v5.step
airplane/radio mount/: Radio holder v5.f3d  Radio holder v5.step  Shell.stl  flap.stl
bike-stuff/chain alignment jig/: pivot.stl  (+2 more)
clip on spacers/: spacers.scad
hat adaptor/: hat adaptor.stl  hat spacer v2.f3d  hat spacer v2.step
inspection plate cover/: cap + spider.3mf  cap.stl  fingercap.stl  spider.stl
lexus-qs/: Cargo.toml  README.md
phone charger/: phone charger.stl
ruduino-silvia/: Cargo.toml
silvia-controller/: Cargo.toml  build.rs  flash.sh  rust-toolchain.toml
silvia-controller/src/: debounced.rs  formatting.rs  lib.rs  main.rs  millis.rs  switches.rs
silvia-controller/src/brews/: backflush.rs  mod.rs  preinfuse.rs  repro.rs  richo.rs  straight.rs  valveopen.rs
stratux mount/: clamp.stl  mount.stl
winglet/: TEST assembled lowpoly winglet.SLDASM  TEST assembled lowpoly winglet.STL  Winglet v1 v2.SLDPRT  Winglet v1 v2.step  aggressively-simplified-sidepanel.stl  airfoil - naca 4415.csv  airfoil - naca 4415.txt  assembled lowpoly winglet.SLDASM  assembled lowpoly winglet.SLDPRT  first-attempt-naca4415.SLDPRT  lowpoly-reduced-sidepanel.stl  naca-notes.txt  naca3806.txt  naca5806.txt  sidebody-notes.txt  simplified-sidepanel.stl  winglet v3 - 10deg.STL  winglet v3 cut.STL  winglet v3.SLDPRT  winglet v3.STL  winglet v3_project_folders.html  winglet.stl
(+44 files in other folders)
