[package]
name = "silvia-controller"
version = "0.1.0"
authors = ["Richo Healey <richo@psych0tik.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "prod"
test = false
bench = false

[[bin]]
name = "screen-test"
test = false
bench = false

[[bin]]
name = "millis"
test = false
bench = false
required-features = ["logging"]

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
hd44780-driver = "0.4.0"
avr-device = { version = "0.5.0", features = ["atmega328p"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"


[features]
logging = []
disable-relays = []
